# duklog

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  insta.yaml
.claude/: settings.json
.claude/agents/: check-coverage.md  code-review.md  run-ci.md  search-rust-doc.md
.claude/commands/: code-review.md
.claude/rules/: adif.md  domain.md  testing.md  tui.md
.claude/skills/coding-standards/: SKILL.md
.claude/skills/commit/: SKILL.md
.claude/skills/create-pr/: SKILL.md
.claude/skills/learn-from-feedback/: SKILL.md
.claude/skills/reflect/: SKILL.md
.claude/skills/search-rust-doc/: SKILL.md
.github/workflows/: ci.yml  release.yml
docs/: about.md  adif-format.md  adif-native-storage.md  architecture.md  development.md  implementation-plan.md  roadmap.md  user-guide.md
docs/adr/: 0001-log-enum-model.md  0002-explicit-screen-dispatch.md  0003-dynamic-form-construction.md  0004-hand-written-adif-reader.md  0005-widget-rendering-test-strategy.md
docs/reference/: adif-band-frequencies.md  adif-spec-notes.md  arrl-field-day-notes.md  fcc-us-band-privileges.md  pota-rules-notes.md  ratatui-notes.md  testing-tools-notes.md  winter-field-day-notes.md
src/: lib.rs  main.rs
src/adif/: error.rs  mod.rs  reader.rs  writer.rs
src/model/: band.rs  log.rs  mod.rs  mode.rs  qso.rs  validation.rs
src/model/log/: field_day.rs  general.rs  header.rs  mod.rs  pota.rs  wfd.rs
src/storage/: error.rs  export.rs  manager.rs  mod.rs
src/tui/: action.rs  app.rs  error.rs  mod.rs  test_utils.rs
src/tui/screens/: export.rs  help.rs  log_create.rs  log_select.rs  mod.rs  qso_entry.rs  qso_list.rs
src/tui/screens/snapshots/: duklog__tui__screens__qso_entry__tests__rendering__recent_qsos_rendering__snap_fd_exchange_and_freq.snap  duklog__tui__screens__qso_entry__tests__rendering__recent_qsos_rendering__snap_fd_exchange_no_freq.snap  duklog__tui__screens__qso_entry__tests__rendering__recent_qsos_rendering__snap_general_tall_terminal_shows_more_rows.snap  (+13 more)
src/tui/widgets/: form.rs  mod.rs  status_bar.rs
tests/: adif_validation.rs
