[package]
name = "duklog"
version = "0.7.0"
edition = "2024"
description = "Offline ham radio logging TUI for POTA activations"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[dependencies]
bytes = "1.11.1"
chrono = { version = "0.4", features = ["serde"] }
crossterm = "0.28"
difa = "0.1.1"
dirs = "6"
mutants = "0.0.3"
ratatui = "0.29"
tui-textarea = "0.7"
regex = "1"
serde = { version = "1", features = ["derive"] }
futures = { version = "0.3", default-features = false, features = ["std"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt", "fs", "io-util"] }
tokio-util = { version = "0.7.18", features = ["codec"] }

[dev-dependencies]
insta = "1"
quickcheck = "1"
quickcheck_macros = "1"
tempfile = "3"
tokio = { version = "1", features = ["macros"] }
